kubernetes/development.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service
  namespace: health-service
  labels:
    app: health-service
spec:
  selector:
    matchLabels:
      app: health-service
  replicas: 2
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
        - name: health-service
          image: ghcr.io/spotify-portal-public-demo/health-service:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: health-service
  labels:
    app: health-service
spec:
  clusterIP: None
  selector:
    app: health-service
  ports:
    - name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service
  namespace: health-service
  annotations:
    cert-manager.io/cluster-issuer: demo-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
spec:
  ingressClassName: external
  rules:
    - host: health.demo.spotifyportal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8080
  tls:
    - secretName: health-demo-cert
      hosts:
        - health.demo.spotifyportal.com
